[gd_scene load_steps=6 format=2]

[ext_resource path="res://world_test_v03/Dialogue_Box_01.gd" type="Script" id=1]
[ext_resource path="res://world_test_v03/assets/fonts/pixel_font/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://world_test_v03/DialoguePlayer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -120.0
margin_right = 200.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Name" type="Label" parent="Panel/HBoxContainer"]
margin_top = 12.0
margin_right = 64.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "NAME"

[node name="Text" type="Label" parent="Panel/HBoxContainer"]
margin_left = 68.0
margin_top = 12.0
margin_right = 196.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "DIALOGUE"

[node name="ButtonNext" type="Button" parent="Panel/HBoxContainer"]
margin_left = 200.0
margin_right = 242.0
margin_bottom = 40.0
text = "Next"

[node name="ButtonEnd" type="Button" parent="Panel/HBoxContainer"]
margin_left = 246.0
margin_right = 292.0
margin_bottom = 40.0
text = "Done"

[node name="DialoguePlayer" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="pressed" from="Panel/HBoxContainer/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ButtonEnd" to="." method="_on_ButtonEnd_pressed"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finished"]
